RESOLVED FIXED302342
Crash in CommandEncoder::beginRenderPass using depth stencil attachments from GPUTexture instances
https://bugs.webkit.org/show_bug.cgi?id=302342
Summary Crash in CommandEncoder::beginRenderPass using depth stencil attachments from...
Mike Wyrzykowski
Reported 2025-11-11 11:44:44 PST
Crash in CommandEncoder::beginRenderPass using depth stencil attachments from GPUTexture instances
Attachments
Mike Wyrzykowski
Comment 1 2025-11-11 11:44:56 PST
Mike Wyrzykowski
Comment 2 2025-11-11 11:57:25 PST
EWS
Comment 3 2025-11-15 10:56:41 PST
Committed 303078@main (0243c25f6e57): <https://commits.webkit.org/303078@main> Reviewed commits have been landed. Closing PR #53761 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.