Crash in CommandEncoder::beginRenderPass using depth stencil attachments from GPUTexture instances https://bugs.webkit.org/show_bug.cgi?id=302342 radar://164499025

Reviewed by Geoffrey Garen.

We unconditionally attempted to clear the depth stencil view, even
when the depth stencil attachment was passed as a texture.

Test: fast/webgpu/nocrash/fuzz-302342.html
* LayoutTests/fast/webgpu/nocrash/fuzz-302342-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-302342.html: Added.
* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::beginRenderPass):
* Source/WebGPU/WebGPU/CommandEncoder.swift:
(WebGPU.beginRenderPass(_:)):

Canonical link: https://commits.webkit.org/303078@main